--- a/Advanced-Voice-Call-for-Gaming/Spacewar-with-AMG-Voice-SDK-Cocos2d/proj.android-studio/app/build.gradle
+++ b/Advanced-Voice-Call-for-Gaming/Spacewar-with-AMG-Voice-SDK-Cocos2d/proj.android-studio/app/build.gradle
@@ -10,6 +10,10 @@ android {
         targetSdkVersion 25
         versionCode System.getenv("BUILD_NUMBER") as Integer ?: 8
         versionName System.getenv("GAME_SDK_VERSION") ?: "1.0"
+
+        ndk {
+            abiFilters  "armeabi-v7a"
+        }
     }
 
     sourceSets.main {
