cocos2d Demo with C++ API SDK

--- a/Advanced-Voice-Call-for-Gaming/Spacewar-with-AMG-Voice-SDK-Cocos2d/proj.android-studio/app/build.gradle
+++ b/Advanced-Voice-Call-for-Gaming/Spacewar-with-AMG-Voice-SDK-Cocos2d/proj.android-studio/app/build.gradle
@@ -48,8 +48,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile fileTree(include: ['*.jar'], dir: '../../AgoraGamingSDK/libs/Android')
+    compile fileTree(include: ['*.jar'], dir: '../../libs/Android')
     compile project(':libcocos2dx')
     compile 'com.android.support:appcompat-v7:25.1.0'
 }
