--- a/Basic-Voice-Call-for-Gaming/Hello-Cocos2d-Agora/proj.ios_mac/mac/Info.plist
+++ b/Basic-Voice-Call-for-Gaming/Hello-Cocos2d-Agora/proj.ios_mac/mac/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Icon</string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>io.agora.gaming.cocos2d</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
